<resources>
    <string name="app_name">Ofox Messenger</string>
    <string name="welcome_to_ofox">Добро пожаловать в Ofox Messenger</string>
    <string name="email">Email</string>
    <string name="password">Пароль</string>
    <string name="login">Войти</string>
    <string name="no_account_register">Нет аккаунта? Зарегистрироваться</string>
    <string name="toggle_theme">Переключить тему</string>
    <string name="change_language">Изменить язык</string>
    <string name="app_logo">Логотип приложения</string>
    <string name="network_error">Ошибка сети. Проверьте подключение.</string>
    <string name="retry">Повторить</string>
    <string name="login_success">Вход выполнен успешно</string>
    <string name="login_failed">Ошибка входа</string>
    <string name="select_language">Выберите язык</string>
    <string name="russian">Русский</string>
    <string name="english">English</string>
    <string name="kazakh">Қазақша</string>
    <string name="app_version">Версия 1.0</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="no_account">Нет аккаунта?</string>
    <string name="register">Зарегистрироваться</string>
    <string name="app_slogan">Общайтесь без границ</string>
    <string name="developed_by">Разработано SG STUDIO © 2025</string>
    <!-- Новые строки для регистрации -->
    <string name="register_welcome">Добро пожаловать в Ofox Messenger</string>
    <string name="nickname">Никнейм</string>
    <string name="confirm_password">Подтвердите пароль</string>
    <string name="select_photo">Выбрать фото</string>
    <string name="have_account">Уже есть аккаунт?</string>
    <string name="registration_success">Регистрация успешно завершена</string>
    <string name="registration_failed">Ошибка при регистрации</string>
    <string name="error_empty_nickname">Введите никнейм</string>
    <string name="error_short_nickname">Никнейм должен содержать минимум 3 символа</string>
    <string name="error_empty_email">Введите email</string>
    <string name="error_invalid_email">Введите корректный email</string>
    <string name="error_empty_password">Введите пароль</string>
    <string name="error_short_password">Пароль должен содержать минимум 6 символов</string>
    <string name="error_empty_confirm_password">Подтвердите пароль</string>
    <string name="error_passwords_not_match">Пароли не совпадают</string>
    <string name="error_upload_image">Ошибка при загрузке изображения</string>
    <string name="permission_required">Требуется разрешение</string>
    <string name="permission_rationale">Для выбора фото профиля необходим доступ к галерее</string>
    <string name="ok">OK</string>
    <string name="cancel">Отмена</string>
    <string name="permission_denied">Разрешение на доступ к фото отклонено</string>
    <string name="terms_agreement">Я согласен с <font color="#FF5722"><u>Политикой конфиденциальности</u></font> и <font color="#FF5722"><u>Пользовательским соглашением</u></font></string>
    <string name="terms_not_accepted">Для регистрации необходимо принять условия пользовательского соглашения</string>
    <string name="privacy_policy_title">Политика конфиденциальности</string>
    <string name="terms_of_service_title">Пользовательское соглашение</string>
    <string name="terms_header">Для продолжения регистрации необходимо принять:</string>
    <string name="privacy_policy_link">Политику конфиденциальности</string>
    <string name="terms_of_service_link">Пользовательское соглашение</string>
    <string name="loading">Загрузка...</string>
    <string name="email_verification_title">Подтверждение электронной почты</string>
    <string name="email_verification_message">На адрес %s отправлено письмо с ссылкой для подтверждения. Пожалуйста, проверьте вашу почту и перейдите по ссылке для завершения регистрации.</string>
    <string name="verification_code_title">Введите код подтверждения</string>
    <string name="verification_code_message">На ваш email %s отправлен 6-значный код подтверждения. Введите его для завершения регистрации.</string>
    <string name="verification_code_hint">Код подтверждения</string>
    <string name="resend_code">Отправить код повторно</string>
    <string name="code_sent">Код отправлен на ваш email</string>
    <string name="invalid_code">Неверный код подтверждения</string>
    <string name="verification_success">Регистрация успешно завершена</string>
    <string name="verification_failed">Ошибка подтверждения</string>
    <!-- Добавьте эти строки в существующий файл strings.xml -->
    <string name="feed">Лента</string>
    <string name="chats">Чаты</string>
    <string name="discover">Интересное</string>
    <string name="search">Поиск</string>
    <string name="notifications">Уведомления</string>
    <string name="home">Главная</string>
    <string name="messages">Сообщения</string>
    <string name="profile">Профиль</string>
    <string name="settings">Настройки</string>
    <string name="create_new">Создать</string>
    <!-- Добавьте эти строки в существующий файл strings.xml -->
    <string name="like">Нравится</string>
    <string name="comment">Комментировать</string>
    <string name="share">Поделиться</string>
    <string name="profile_avatar">Аватар профиля</string>
    <string name="post_image">Изображение поста</string>
    <string name="no_posts">Нет постов</string>
    <string name="no_posts_description">Здесь будут отображаться посты ваших друзей и сообществ</string>
    <string name="new_message">Новое сообщение</string>
    <string name="no_messages">Нет сообщений</string>
    <string name="no_messages_yet">У вас пока нет сообщений</string>
    <string name="start_conversation">Начните общение, нажав на кнопку нового сообщения</string>
    <string name="logout">Выход</string>
    <string name="logout_confirmation">Вы действительно хотите выйти?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="coming_soon">Скоро будет доступно</string>
    <string name="error_occurred">Произошла ошибка</string>
    <string name="yesterday">Вчера</string>
    <string name="start_chat">Начать чат</string>
    <string name="select_user">Выберите пользователя</string>
    <string name="search_users">Поиск пользователей</string>
    <string name="no_users_found">Пользователи не найдены</string>
    <string name="create_chat">Создать чат</string>
    <string name="error_loading_users">Ошибка при загрузке пользователей</string>
    <string name="back">Назад</string>
</resources>